@@ -275,8 +275,15 @@ Element.Methods = {
     element = $(element);
     if (Prototype.Browser.IE) {
       var t = Element._attributeTranslations.read;
-      if (t.values[name]) return t.values[name](element, name);
       if (t.names[name]) name = t.names[name];
+      // If we're reading from a form, avoid a conflict between an attribute
+      // and a child name.
+      if (element.tagName.toUpperCase() == 'FORM' &&
+        !/^((child|parent)Node|(next|previous)Sibling)$/.test(name) &&
+          element.children[name]){
+        element = element.cloneNode(false); // don't extend here
+      }
+      if (t.values[name]) return t.values[name](element, name);
       if (name.include(':')) {
         return (!element.attributes || !element.attributes[name]) ? null : 
          element.attributes[name].value;
