@@ -909,6 +909,12 @@ new Test.Unit.Runner({
   },
   
   testElementReadAttribute: function() {
+    var attribFormIssues = $('attributes_with_issues_form');
+    this.assertEqual('blah-class', attribFormIssues.readAttribute('class'));
+    this.assertEqual('post', attribFormIssues.readAttribute('method'));
+    this.assertEqual('string', typeof(attribFormIssues.readAttribute('action')));
+    this.assertEqual('string', typeof(attribFormIssues.readAttribute('id')));
+    
     this.assertEqual('test.html' , $('attributes_with_issues_1').readAttribute('href'));
     this.assertEqual('L' , $('attributes_with_issues_1').readAttribute('accesskey'));
     this.assertEqual('50' , $('attributes_with_issues_1').readAttribute('tabindex'));
