@@ -147,7 +147,13 @@
 <a id="attributes_with_issues_1" href="test.html" accesskey="L" tabindex="50" title="a link" onclick="alert('hello world');"></a>
 <a id="attributes_with_issues_2" href="" accesskey="" tabindex="" title=""></a>
 <a id="attributes_with_issues_3"></a>
-<form id="attributes_with_issues_form" method="post" action="blah">
+<form id="attributes_with_issues_form" method="post" action="blah" class="blah-class">
+  <input type="hidden" id="id" />
+  <input type="hidden" name="id" />
+  <input type="checkbox" id="action" />
+  <input type="checkbox" name="action" />
+  <input type="text" id="method" />
+  <input type="hidden" name="class" />
   <input type="checkbox" id="attributes_with_issues_checked" name="a" checked="checked"/>
   <input type="checkbox" id="attributes_with_issues_disabled" name="b" checked="checked" disabled="disabled"/>
   <input type="text" id="attributes_with_issues_readonly" name="c" readonly="readonly" value="blech"/>
